fixed enter key search & text overflow, added heart & star with click events

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ nav ul li .fa-star:hover {
 
 #page-title {
     font-size: 55px;
+    cursor: default;
 }
 
 #line {
@@ -61,6 +62,7 @@ nav ul li .fa-star:hover {
 #page-subtitle {
     font-size: 11.5px;
     letter-spacing: 2px;
+    cursor: default;
 }
 
 #search #search-box {
@@ -101,7 +103,7 @@ nav ul li .fa-star:hover {
 #search #search-box #search-field .input {
     font-family:"Montserrat", sans-serif;
     letter-spacing: 2px;
-    width: 90%;
+    width: 113%;
     padding-left: 30px;
     padding-right: 38px;
   }
@@ -177,6 +179,11 @@ main {
     text-align: center;
     font-weight: 900;
     letter-spacing: 2px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    cursor: default;
 }
 
 .channel-name {
@@ -185,16 +192,26 @@ main {
     font-size: 12px;
     font-weight: 900;
     letter-spacing: 2px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    cursor: default;
 }
 
 .video-title {
     position: absolute;
     top: 35px;
-    line-height: 12px;
+    line-height: 15px;
     text-align: center;
     font-size: 11px;
     font-weight: 400;
     letter-spacing: 2px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    cursor: default;
 }
 
 .song-name {
@@ -204,6 +221,11 @@ main {
     font-size: 11px;
     font-weight: 400;
     letter-spacing: 2px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    cursor: default;
 }
 
 .link-hub {
@@ -215,6 +237,40 @@ main {
 .link-hub i {
     font-size: 20px;
     padding-right: 20px;
+}
+
+.link-hub .fa-heart {
+    padding-right: 0;
+    position: absolute;
+    right: -90px;
+    top: -4px;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.link-hub .fa-heart:active {
+    transform: scale(1.1);
+}
+
+.liked-song {
+    color: var(--red);
+}
+
+.link-hub .fa-star {
+    padding-right: 0;
+    position: absolute;
+    right: -90px;
+    top: -4px;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.link-hub .fa-star:active {
+    transform: scale(1.1);
+}
+
+.liked-video {
+    color: var(--blue);
 }
 
 .fa-youtube:hover {
